--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -976,10 +976,12 @@
 
                 <!-- 탭 -->
                 <div class="tab_group">
-                    <ul>
-                        <li class="on"><a href="" rel="tab_content_01">투자사 보기</a></li>
-                        <li><a href="" rel="tab_content_02">펀드/조합 보기</a></li>
-                    </ul>
+                    <div class="tab_btn">
+                        <ul>
+                            <li class="on"><a href="" rel="tab_content_01">투자사 보기</a></li>
+                            <li><a href="" rel="tab_content_02">펀드/조합 보기</a></li>
+                        </ul>
+                    </div>
                     <div class="tab_content">
                         <!-- 첫번째 탭 -->
                         <div class="on tab_content_01">
