--- a/portal/html/USR-1030-B-LIST.html
+++ b/portal/html/USR-1030-B-LIST.html
@@ -351,7 +351,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -374,7 +374,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -397,7 +397,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -420,7 +420,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -443,7 +443,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -466,7 +466,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
