--- a/portal/html/USR-1052-B-LIST.html
+++ b/portal/html/USR-1052-B-LIST.html
@@ -352,7 +352,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -366,7 +366,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -380,7 +380,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -394,7 +394,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -408,7 +408,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -422,7 +422,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -436,7 +436,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -450,7 +450,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -464,7 +464,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -478,7 +478,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
