--- a/portal/html/USR-1162-B-LIST.html
+++ b/portal/html/USR-1162-B-LIST.html
@@ -354,7 +354,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -380,7 +380,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -403,7 +403,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -428,7 +428,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -454,7 +454,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -477,7 +477,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -503,7 +503,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
