--- a/portal/html/USR-1231-B-LIST.html
+++ b/portal/html/USR-1231-B-LIST.html
@@ -351,7 +351,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -365,7 +365,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -379,7 +379,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -393,7 +393,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -407,7 +407,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -421,7 +421,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
