--- a/portal/html/USR-1234-B-LIST.html
+++ b/portal/html/USR-1234-B-LIST.html
@@ -351,7 +351,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
@@ -364,7 +364,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
@@ -377,7 +377,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
@@ -390,7 +390,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
@@ -403,7 +403,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
@@ -416,7 +416,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
@@ -429,7 +429,7 @@
                             </a>
                             <div class="info">
                                 <ul>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
