--- a/portal/html/USR-1235-B-LIST.html
+++ b/portal/html/USR-1235-B-LIST.html
@@ -352,7 +352,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -367,7 +367,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -382,7 +382,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -397,7 +397,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -412,7 +412,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -427,7 +427,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
@@ -442,7 +442,7 @@
                             <div class="info">
                                 <ul>
                                     <li>작성자</li>
-                                    <li>2022-08-26</li>
+                                    <li>등록일 2022-08-26</li>
                                     <li>조회수 111</li>
                                 </ul>
                             </div>
