--- a/pub_list.html
+++ b/pub_list.html
@@ -618,19 +618,19 @@
                     division: '',
                     depth1:'공지사항(TAB-6)',
                     path:'./portal/html/USR-1320-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-11-11',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'공지사항 상세',
                     path:'./portal/html/USR-1320-B-DTL.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-11-11',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
