--- a/portal/html/USR-02-04-B-LIST.html
+++ b/portal/html/USR-02-04-B-LIST.html
@@ -331,11 +331,13 @@
                 </div>
 
                 <div class="tab_group">
-                    <ul>
-                        <li class="on"><a href="" rel="tab_content_01">전체</a></li>
-                        <li><a href="" rel="tab_content_02">신청요건</a></li>
-                        <li><a href="" rel="tab_content_03">신청절차</a></li>
-                    </ul>
+                    <div class="tab_btn">
+                        <ul>
+                            <li class="on"><a href="" rel="tab_content_01">전체</a></li>
+                            <li><a href="" rel="tab_content_02">신청요건</a></li>
+                            <li><a href="" rel="tab_content_03">신청절차</a></li>
+                        </ul>
+                    </div>
                     <div class="tab_content">
 
                         <!-- 첫번째 탭 -->
