--- a/portal/html/USR-1150-B-LIST.html
+++ b/portal/html/USR-1150-B-LIST.html
@@ -334,11 +334,13 @@
                 </div>
 
                 <div class="tab_group">
-                    <ul>
-                        <li class="on"><a href="" rel="tab_content_01">전체</a></li>
-                        <li><a href="" rel="tab_content_02">분야1</a></li>
-                        <li><a href="" rel="tab_content_03">분야2</a></li>
-                    </ul>
+                    <div class="tab_btn">
+                        <ul>
+                            <li class="on"><a href="" rel="tab_content_01">전체</a></li>
+                            <li><a href="" rel="tab_content_02">분야1</a></li>
+                            <li><a href="" rel="tab_content_03">분야2</a></li>
+                        </ul>
+                    </div>
                     <div class="tab_content">
 
                         <!-- 첫번째 탭 -->
