--- a/pub_list.html
+++ b/pub_list.html
@@ -472,10 +472,10 @@
                     division: '',
                     depth1:'자료실 - 뉴스레터 웹진',
                     path:'./portal/html/USR-1232-B-LIST.html',
-                    date:'',
+                    date:'2022-08-30',
                     mdate:'2022-09-16',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입 - 뉴스레터]'
                 },
                 {
                     division: '',
@@ -672,10 +672,64 @@
                     division: '',
                     depth1:'커뮤니티 - 메인(TAB-5)(SUBTAB-5)',
                     path:'./portal/html/USR-1334-F-DASH.html',
-                    date:'',
+                    date:'2022-08-30',
                     mdate:'2022-10-07',
+                    con:'완료',
+                    etc:'[1차디자인][게시판 타입1 - 목록]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 공지사항 - 상세',
+                    path:'./portal/html/USR-1335-B-DTL.html',
+                    date:'',
+                    mdate:'',
                     con:'작업중',
-                    etc:'[1차디자인]'
+                    etc:'기획서 없음[게시판 타입1 - 상세]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 공지사항 - 등록/수정',
+                    path:'./portal/html/USR-1335-B-FORM.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:'기획서 없음[게시판 타입1 - 등록/수정]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 자유게시판 - 상세',
+                    path:'./portal/html/USR-1336-B-DTL.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:'기획서 없음[게시판 타입1 - 상세]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 자유게시판 - 등록/수정',
+                    path:'./portal/html/USR-1336-B-FORM.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:'기획서 없음[게시판 타입1 - 등록/수정]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 일정알림 - 상세',
+                    path:'./portal/html/USR-1337-B-DTL.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:'기획서 없음[게시판 타입1 - 상세]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 일정알림 - 등록/수정',
+                    path:'./portal/html/USR-1337-B-FORM.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:'기획서 없음[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
