--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -832,7 +832,7 @@
                                     </span>
                                     <span>
                                         <input type="checkbox" id="chk_66">
-                                        <label for="chk_66">CLC</label>
+                                        <label for="chk_66">LLC</label>
                                     </span>
                                     <span>
                                         <input type="checkbox" id="chk_67">
@@ -840,7 +840,7 @@
                                     </span>
                                     <span>
                                         <input type="checkbox" id="chk_68">
-                                        <label for="chk_68">개인</label>
+                                        <label for="chk_68">전문엔젤</label>
                                     </span>
                                     <span>
                                         <input type="checkbox" id="chk_69">
