--- a/pub_list.html
+++ b/pub_list.html
@@ -128,6 +128,17 @@
                     etc:''
                 },
 
+                // 요청
+                {
+                    division: '',
+                    depth1:'비밀글 비밀번호 확인',
+                    path:'./portal/html/secret.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:''
+                },
+
                 // 메인
                 {
                     division: '메인',
@@ -153,18 +164,18 @@
                     division: '',
                     depth1:'투자자검색 - 상세(TAB-2)',
                     path:'./portal/html/USR-1020-F-DTL.html',
-                    date:'',
+                    date:'2022-08-30',
                     mdate:'2022-09-05',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[스타일가이드] 펀드정보[2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'투자유치 희망기업 검색',
                     path:'./portal/html/USR-1010-F-LIST.html',
-                    date:'',
+                    date:'2022-08-30',
                     mdate:'2022-09-05',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[스타일가이드]'
                 },
                 {
