--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -338,6 +338,14 @@
                         <div class="inp_box">
                             <input type="text">
                         </div>
+                        <div class="inp_group">
+                            <div class="inp_box">
+                                <input type="text" id="input_01">
+                            </div>
+                            <div class="txt_warning">
+                                아이디를 입력해 주세요.
+                            </div>
+                        </div>
                     </dd>
                 </dl>
                 <br/>
@@ -425,7 +433,7 @@
                                 <td>
                                     <div class="inp_group">
                                         <div class="inp_box datepicker_box">
-                                            <input type="text" id="input_04" class="datepicker">
+                                            <input type="text" id="input_04" class="datepicker_day">
                                         </div>
                                     </div>
                                 </td>
