--- a/pub_list.html
+++ b/pub_list.html
@@ -182,18 +182,18 @@
                     division: '',
                     depth1:'투자유치 희망기업 검색 - 상세(TAB-2)',
                     path:'./portal/html/USR-1010-F-DTL.html',
-                    date:'',
+                    date:'2022-08-31',
                     mdate:'2022-09-05',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[스타일가이드]'
                 },
                 {
                     division: '',
                     depth1:'투자유치 희망기업 검색 - 등록/수정(TAB-3)',
-                    path:'./portal/html/USR-1010-F-DTL.html',
-                    date:'',
+                    path:'./portal/html/USR-1010-F-FORM.html',
+                    date:'2022-08-31',
                     mdate:'2022-09-05',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
@@ -220,7 +220,7 @@
                     path:'./portal/html/USR-1030-B-FORM.html',
                     date:'2022-08-26',
                     mdate:'2022-09-19',
-                    con:'완료',
+                    con:'보류',
                     etc:'[게시판 타입1 - 등록수정]'
                 },
                 {
